# Cosmology-Project

./: 404.html  LICENSE  README.md  index.html  sitemap.xml
cosmo/: mkdocs.yml  pyproject.toml
cosmo/docs/: index.md
cosmo/docs/notebooks/: CosmoIntro.ipynb  CosmoIntroPrez.ipynb  Distances.ipynb  DistancesPrez.ipynb  Fit_Models.ipynb  Fit_ModelsPrez.ipynb  InterestingTidbits.ipynb  LDADCD3.py  Make_Mock_Data.ipynb  PartOneGraphsPluto.py  normmass1.py  normmass_vs_age1.py
notebooks/CosmoIntro/: index.html
notebooks/Distances/: index.html
notebooks/Fit_Models/: index.html
notebooks/InterestingTidbits/: index.html
notebooks/Make_Mock_Data/: index.html
search/: search_index.json
