[tool.poetry]
name = "cosmo"
version = "0.1.0"
description = "Cosmology Project for 3rd year astrophysics at University of Queensland."
authors = ["Tamara Davis <tamarad@physics.uq.edu.au>"]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
